Added new parameters and updated functionality in Scheduler components
In this commit, several changes were made to the Scheduler components. In `ScheduleViewBase.cs`, a `CascadingParameter` named `Scheduler` was added to allow the `Scheduler` to be passed down from a parent component. An `ElementReference` named `Element`, a `Parameter` named `HeaderStyle`, and a new method `OnParametersSet` were also added.

In `TnTScheduler.razor.cs`, a new `Parameter` named `DisableDragAndDrop` was added to allow disabling of the drag and drop functionality.

`TnTWeekView.razor` and `TnTWeekView.razor.cs` saw changes in inheritance, class definition, and functionality. The `style` and `draggable` attributes of certain `div` elements were updated, and the `GetBackground` method was updated to return different colors for different days of the week. The condition for early return from `HandleDayOnDrop` was also updated.

--- a/TnTComponents/Scheduler/TnTWeekView.razor
+++ b/TnTComponents/Scheduler/TnTWeekView.razor
@@ -2,8 +2,10 @@
 @using BlazorCalendar
 @using BlazorCalendar.Models
 @using BlazorCalendar.Styles
+@using TnTComponents.Scheduler.Infrastructure
 @namespace TnTComponents
-@inherits CalendarBase
+@typeparam TEventType
+@inherits ScheduleViewBase<TEventType>
 
 @{
     DateTime FirstDateWeek = new DateTime(FirstDate.Year, FirstDate.Month, FirstDate.Day).AddDays(-(Dates.GetNumOfDay((int)FirstDate.Date.DayOfWeek) - 2));
@@ -24,7 +26,7 @@
     }
 }
 
-<div class=@($"{isHidden} weekly-calendar") style="@Style">
+<div class=@($"{isHidden} weekly-calendar") style="@CssStyle">
 
     @for (var i = 0; i < 7; i++)
     {
@@ -76,7 +78,7 @@
 
                                 <div class="@($"hour-task {classPin}{classPointer} border-start border-top border-bottom")"
                                      style="grid-column-start: @column; @taskColor"
-                                     draggable="@Draggable.ToString()" 
+                                     draggable="@((!Scheduler.DisableDragAndDrop).ToString())" 
                                      @ondragstart="() => HandleDragStart(t.ID)"
                                      @onclick="e => ClickTaskInternal(e, t.ID, day)">
                                     @t.Code
