Refactor TnTWeekView to use Scheduler object
This commit includes several changes to the `TnTWeekView.razor` and `TnTWeekView.razor.cs` files. The `DisplayedView` and `TasksList` properties are now accessed through a `Scheduler` object instead of being directly accessed. This change is reflected in all conditional checks and loops where these properties are used. The `DisplayedView` and `TasksList` cascading parameters have been removed from the `TnTWeekView.razor.cs` file. The `TasksList` is now sorted by `DateStart` and then by `DateEnd` in descending order each time the view is redrawn. The `isHidden` string is now set based on the `DisplayedView` property of the `Scheduler` object.

--- a/TnTComponents/Scheduler/TnTWeekView.razor
+++ b/TnTComponents/Scheduler/TnTWeekView.razor
@@ -10,7 +10,7 @@
 @{
     DateTime FirstDateWeek = new DateTime(FirstDate.Year, FirstDate.Month, FirstDate.Day).AddDays(-(Dates.GetNumOfDay((int)FirstDate.Date.DayOfWeek) - 2));
     string[] dayNames = CultureInfo.CurrentCulture.DateTimeFormat.AbbreviatedDayNames;
-    string? isHidden = DisplayedView == DisplayedView.Weekly ? null : "hidden-element";
+    string? isHidden = Scheduler.DisplayedView == DisplayedView.Weekly ? null : "hidden-element";
     string? CSSbackground = null;
     string? taskColor = null;
     string? classPin = null;
@@ -18,9 +18,8 @@
     string borderStyle = "";
 
     // The sorting must be done each time we redraw in case the user moves the spots
-    if (TasksList is not null)
-    {
-        TasksList = TasksList.OrderBy(x => x.DateStart)
+    if (Scheduler.TasksList is not null) {
+        Scheduler.TasksList = Scheduler.TasksList.OrderBy(x => x.DateStart)
                              .ThenByDescending(x => x.DateEnd)
                              .ToArray();
     }
@@ -57,15 +56,13 @@
                         @hours.ToString("HH:mm")
                     </div>
 
-                    @if (TasksList is not null)
-                    {
+                    @if (Scheduler.TasksList is not null) {
                         int column = 1;
 
-                        for (var k = 0; k < TasksList.Length; k++)
-                        {
-                            Tasks t = TasksList[k];
+                        for (var k = 0; k < Scheduler.TasksList.Length; k++) {
+                            Tasks t = Scheduler.TasksList[k];
 
-             
+
                             if (t.DateEnd > hours && t.DateStart <= hours)
                             {
                                 column++;
