`Updated TnTScheduler.razor and TnTScheduler.razor.cs with new properties and structure`
` `

`Modified the TnTScheduler.razor file to include a new div element with additional attributes, CSS class, and CSS style. The CascadingValue component has been moved inside this div and the components for DisplayedView, FirstDate, and TasksList have been removed. In the TnTScheduler.razor.cs file, the TnTComponents.Core namespace has been added. New properties AdditionalAttributes, CssClass, CssStyle, and Element have been added to capture unmatched values, create CSS classes and styles, and hold a reference to the div element respectively. Also, several empty comment lines have been added as placeholders for future code or comments.`

--- a/TnTComponents/Scheduler/TnTScheduler.razor
+++ b/TnTComponents/Scheduler/TnTScheduler.razor
@@ -4,13 +4,9 @@
 @namespace TnTComponents
 @typeparam TEventType
 
-<CascadingValue Value="this" IsFixed="true">
-    <CascadingValue Value="DisplayedView" Name="SelectedView">
-        <CascadingValue Value="FirstDate" Name="FirstDate">
-            <CascadingValue Value="TasksList" Name="TasksList">
-                @ChildContent
-            </CascadingValue>
-        </CascadingValue>
+<div @attributes="AdditionalAttributes" class="@CssClass" style="@CssStyle" @ref="Element">
+    <CascadingValue Value="this" IsFixed="true">
+        @ChildContent
     </CascadingValue>
-</CascadingValue>
+</div>
 
