--- a/TnTComponents/Styles/TnTComponents/_scheduler.scss
+++ b/TnTComponents/Styles/TnTComponents/_scheduler.scss
@@ -1,81 +1,24 @@
-﻿//.tnt-scheduler {
-//    overflow: auto;
-//    width: 100%;
-//    display: block;
-//    box-sizing: border-box;
-//    padding: 0.5rem;
+﻿.tnt-scheduler {
+    .tnt-week-view {
 
-//    .tnt-week-view {
-//        width: 100%;
-//        min-width: $small-screen-up;
-//        display: flex;
-//        flex-direction: row;
+        .tnt-slot {
+            grid-row-start: var(--row-index);
+            grid-column-start: var(--column-index);
+        }
 
-//        .tnt-slot {
-//            height: 1.5rem;
-//        }
+        .tnt-day-column {
+            grid-column-start: var(--column-index);
+        }
 
-//        .tnt-header-slot {
-//            height: 3rem;
-//            text-align: center;
-//        }
+        .tnt-column-header {
+            text-align: center;
+        }
+    }
+}
 
-//        .tnt-time-slots {
-//            width: 5rem;
 
-//            .tnt-time-slot {
-//                text-align: right;
-//                box-sizing: border-box;
-//                padding-right: 0.5rem;
-//            }
-//        }
 
-//        .tnt-slot-column {
-//            position: relative;
-//            width: calc(calc(100% - 5rem) / 7);
 
-//            .tnt-day-slot:not(.tnt-header-slot) {
-//                outline: 1px solid color-mix(in srgb, $tnt-color-outline 15%, transparent);
-//                background-color: $tnt-color-surface-container-lowest;
-
-//                &.disabled {
-//                    background-color: $tnt-color-surface-container-highest;
-//                }
-
-//                &:not(.disabled) {
-//                    cursor: pointer;
-
-//                    &:hover {
-//                        background-color: color-mix(in srgb, $tnt-color-surface-tint 30%, transparent);
-//                    }
-//                }
-//            }
-
-//            .tnt-event {
-//                position: absolute;
-//                top: 0;
-//                opacity: 0;
-//                background-color: $tnt-color-tertiary;
-//                color: $tnt-color-on-tertiary;
-//                padding: 0 0.25rem;
-//                outline: 1px solid $tnt-color-outline;
-//                box-sizing: border-box;
-//                margin: 0 0.25rem;
-//                animation: FadeIn 150ms ease-in-out 150ms forwards;
-//            }
-//        }
-//    }
-//}
-
-//@keyframes FadeIn {
-//    from {
-//        opacity: 0;
-//    }
-
-//    to {
-//        opacity: 1;
-//    }
-//}
 .hidden-element {
     display: none !important;
 }
@@ -228,4 +171,3 @@
     border-left-style: solid !important;
     border-left-color: #4d4d4d4c !important;
 }
-
