--- a/TnTComponents/Styles/TnTComponents/_scheduler.scss
+++ b/TnTComponents/Styles/TnTComponents/_scheduler.scss
@@ -1,17 +1,41 @@
 ﻿.tnt-scheduler {
+    overflow-x: auto;
+
     .tnt-week-view {
+        padding: 0.5rem;
+        margin: 0.5rem;
+        display: grid;
+        min-width: $small-screen-up;
+
+        .tnt-column-header {
+            text-align: center;
+        }
 
         .tnt-slot {
             grid-row-start: var(--row-index);
             grid-column-start: var(--column-index);
-        }
+            grid-row-end: span var(--row-span);
+            grid-column-end: span var(--column-span);
 
-        .tnt-day-column {
-            grid-column-start: var(--column-index);
-        }
+            &.tnt-day-slot {
+                border-left: 1px solid color-mix(in srgb, $tnt-color-outline-variant 30%, transparent);
+                border-right: 1px solid color-mix(in srgb, $tnt-color-outline-variant 30%, transparent);
 
-        .tnt-column-header {
-            text-align: center;
+                &.tnt-slot-outline {
+                    border: 1px solid color-mix(in srgb, $tnt-color-outline-variant 30%, transparent);
+                }
+            }
+
+            &.tnt-time-slot {
+                min-height: 1px;
+                text-align: right;
+                padding-right: 0.5rem;
+            }
+
+            &.tnt-event {
+                background-color: red;
+                display: inline;
+            }
         }
     }
 }
