--- a/LiveTest/LiveTest.Client/Pages/Scheduler.razor
+++ b/LiveTest/LiveTest.Client/Pages/Scheduler.razor
@@ -1,41 +1,17 @@
 ﻿@page "/scheduler"
-@using BlazorCalendar
-@using BlazorCalendar.Models
 @using TnTComponents
 @using TnTComponents.Scheduler
+@using TnTComponents.Scheduler.Events
 @rendermode InteractiveAuto
 
 <h3>Scheduler</h3>
 
 
-<div class="d-flex flex-row mb-2">
-    <button type="button" @onclick="GoToday" class="btn">📅 Go Today</button>
-    <button type="button" @onclick="@(m => ClicMonthNavigate(-7))" class="btn">🔼</button>
-    <button type="button" @onclick="@(m => ClicMonthNavigate(7))" class="btn me-2">🔽</button>
-    <input type="date" class="me-2" value="@(today.ToString("yyyy-MM-dd"))" @onchange="@(e => ChangeFirstDate(e.Value.ToString()))" />
-    <select @bind="@PriorityDisplay" class="me-2">
-        <option value="@PriorityLabel.Code" selected>priority Code</option>
-        <option value="@PriorityLabel.Caption">priority Caption</option>
-    </select>
-    <div>
-        <input type="checkbox" @bind="draggable" id="is-draggable" />
-        <label for="is-draggable">Draggable</label>
-    </div>
-</div>
-
 <TnTScheduler FirstDate="today"
               TEventType="TnTEvent"
-              TasksList="TasksList.ToArray()"
-              DisplayedView="DisplayedView.Weekly">
+              Events="TasksList.ToArray()">
     <TnTWeekView StartViewOn="DayOfWeek.Tuesday"
-                 PriorityDisplay="@PriorityDisplay"
-                 OutsideCurrentMonthClick="OutsideCurrentMonthClick"
-                 TaskClick="TaskClick"
-                 DayClick="DayClick"
-                 Draggable="@draggable"
-                 DragStart="DragStart"
-                 DropTask="DropTask"
-                 HighlightToday="true" />
+                 DropEventCallback="@((TnTDropEventArgs<TnTEvent> args) => DropEvent(args))" />
 </TnTScheduler>
 
 <br />
@@ -44,9 +20,8 @@
 @code {
     private DateTime today = DateTime.Today;
     private int months = 12;
-    private List<Tasks> TasksList;
+    private List<TnTEvent> TasksList;
     private string fakeConsole = "";
-    private BlazorCalendar.PriorityLabel PriorityDisplay = PriorityLabel.Code;
     private bool draggable = true;
 
     protected override void OnInitialized() {
@@ -54,17 +29,17 @@
         //CultureInfo.DefaultThreadCurrentCulture = new CultureInfo("en-US");
 
         TasksList = new()
-                {
-            new Tasks { ID = 0, DateStart = today.AddDays(0), DateEnd = today.AddDays(1), Code = "HELLO", Color = "#FFD800", Caption = "Lorem ipsum dolor sit amet", FillStyle = FillStyleEnum.BackwardDiagonal },
-            new Tasks { ID = 1, DateStart = today.AddDays(4).AddHours(8), DateEnd = today.AddDays(4).AddHours(11), Code = "😉 CP", Color = "#19C319", Caption = "Lorem ipsum dolor sit amet" } ,
-            new Tasks { ID = 2, DateStart = today.AddDays(-2).AddHours(1).AddMinutes(15), DateEnd = today.AddDays(-2).AddHours(9), Code = "POD", Color = "#844fe7", Caption = "Podcast DevApps", FillStyle = FillStyleEnum.ZigZag } ,
-            new Tasks { ID = 3, DateStart = today.AddHours(5), DateEnd = today.AddHours(10), Code = "CALL", Color = "#eb3c37", ForeColor = "#222", Caption = "Lorem ipsum dolor sit amet", FillStyle=FillStyleEnum.CrossDots },
-            new Tasks { ID = 4, DateStart = today.AddDays(-2).AddHours(1).AddMinutes(15), DateEnd = today.AddDays(-2).AddHours(9), Code = "MTG", Color = "#19C319", Caption = "MTG:France" },
-            new Tasks { ID = 5, DateStart = today.AddDays(-2).AddHours(1).AddMinutes(15), DateEnd = today.AddDays(-2).AddHours(9), Code = "DEV", Color = "#FFD800", Comment="on Teams template", Caption = "Fusce quis purus eu ante" },
-            new Tasks { ID = 6, DateStart = today.AddDays(-2).AddHours(1).AddMinutes(15), DateEnd = today.AddDays(-2).AddHours(9), Code = "MEET", Color = "#0d6efd" },
-            new Tasks { ID = 7, DateStart = today.AddDays(32), DateEnd = today.AddDays(32), Code = "BLAZOR", Color = "#FFC3FF", Caption = "Blazor Dev" } ,
-            new Tasks { ID = 8, DateStart = today.AddDays(45).AddHours(8), DateEnd = today.AddDays(45).AddHours(9), Code = "MEETING", Color = "#2DD7D7", Comment="Julien's test" },
-            new Tasks { ID = 9, DateStart = today.AddDays(-8), DateEnd = today.AddDays(-7), Code = "MEET⭐", Color = "#0d6efd",Caption = "MTG:France" }
+                                {
+            new TnTEvent { EventStart = today.AddDays(0), EventEnd = today.AddDays(1), Title = "HELLO",  },
+            new TnTEvent { EventStart = today.AddDays(4).AddHours(8), EventEnd = today.AddDays(4).AddHours(11), Title = "😉 CP" } ,
+            new TnTEvent { EventStart = today.AddDays(-2).AddHours(1).AddMinutes(15), EventEnd = today.AddDays(-2).AddHours(9) , Title="POD"} ,
+            new TnTEvent { EventStart = today.AddHours(5), EventEnd = today.AddHours(10), Title = "CALL" },
+            new TnTEvent { EventStart = today.AddDays(-2).AddHours(1).AddMinutes(15), EventEnd = today.AddDays(-2).AddHours(9), Title = "MTG"},
+            new TnTEvent { EventStart = today.AddDays(-2).AddHours(1).AddMinutes(15), EventEnd = today.AddDays(-2).AddHours(9), Title = "DEV" },
+            new TnTEvent { EventStart = today.AddDays(-2).AddHours(1).AddMinutes(15), EventEnd = today.AddDays(-2).AddHours(9), Title = "MEET" },
+            new TnTEvent { EventStart = today.AddDays(32), EventEnd = today.AddDays(32), Title = "BLAZOR" } ,
+            new TnTEvent { EventStart = today.AddDays(45).AddHours(8), EventEnd = today.AddDays(45).AddHours(9), Title = "MEETING" },
+            new TnTEvent { EventStart = today.AddDays(-8), EventEnd = today.AddDays(-7), Title = "MEET⭐" }
         };
     }
 
@@ -81,29 +56,12 @@
         today = today.AddDays(daysToAdd);
     }
 
-    private void OutsideCurrentMonthClick(int MonthAdded) {
-        today = today.AddMonths(MonthAdded);
-    }
+    private void DropEvent(TnTDropEventArgs<TnTEvent> args) {
+        var @event = TasksList.Find(a => a.Id == args.Event.Id);
+        TasksList.Remove(@event);
 
-    private void TaskClick(ClickTaskParameter clickTaskParameter) {
-        fakeConsole = "ID task(s) :" + string.Join(", ", clickTaskParameter.IDList);
-    }
+        @event = @event with { EventStart = args.DroppedDateTimeOffset.DateTime, EventEnd = args.DroppedDateTimeOffset.DateTime.Add(@event.EventEnd - @event.EventStart) };
+        TasksList.Add(@event);
 
-    private void DayClick(ClickEmptyDayParameter clickEmptyDayParameter) {
-        fakeConsole = $"Empty day :{clickEmptyDayParameter.Day.ToShortDateString()}  {clickEmptyDayParameter.Day.ToShortTimeString()}";
-    }
-
-    private void DragStart(DragDropParameter dragDropParameter) {
-        fakeConsole = $"DragStart event : {dragDropParameter.taskID}";
-    }
-
-    private void DropTask(DragDropParameter dragDropParameter) {
-        fakeConsole = $"DropTask event :{dragDropParameter.Day.ToShortDateString()} {dragDropParameter.taskID}";
-
-        Tasks taskDropped = TasksList.FirstOrDefault(t => t.ID == dragDropParameter.taskID);
-
-        var TotalDay = (taskDropped.DateEnd - taskDropped.DateStart).TotalDays;
-        taskDropped.DateEnd = dragDropParameter.Day.AddDays(TotalDay);
-        taskDropped.DateStart = dragDropParameter.Day;
     }
 }
