--- a/TnTComponents/Scheduler/TnTWeekView.razor
+++ b/TnTComponents/Scheduler/TnTWeekView.razor
@@ -31,14 +31,22 @@
                             RowIndex = timeGridPosition.RowIndex,
                             ColumnSpan = dateGridPosition.ColumnSpan
                         };
-                    <div class="tnt-slot tnt-day-slot@(show ? " tnt-slot-outline" : null)"
-                         style="@gridPosition.ToCssString()"
-                         ondragover="event.preventDefault();this.style.fontWeight = '600';"
-                         ondragleave="this.style.fontWeight='100';"
-                         @ondrop:preventDefault="true"
-                         @ondrop="@(() => OnDropEvent(new DateTime(date, time)))"
-                         @onclick="@(() => TimeSlotClicked(new DateTime(date, time)))">
-                    </div>
+
+                    @if (IsDisabledSlot(date.DayOfWeek, time)) {
+                        <div class="tnt-slot tnt-day-slot disabled@(show ? " tnt-slot-outline" : null)"
+                             style="@gridPosition.ToCssString()">
+                        </div>
+                    }
+                    else {
+                        <div class="tnt-slot tnt-day-slot@(show ? " tnt-slot-outline" : null)"
+                             style="@gridPosition.ToCssString()"
+                             ondragover="event.preventDefault();this.style.fontWeight = '600';"
+                             ondragleave="this.style.fontWeight='100';"
+                             @ondrop:preventDefault="true"
+                             @ondrop="@(() => OnDropEvent(new DateTime(date, time)))"
+                             @onclick="@(() => TimeSlotClicked(new DateTime(date, time)))">
+                        </div>
+                    }
                 }
             }
         }
