--- a/TnTComponents/Styles/TnTComponents/_scheduler.scss
+++ b/TnTComponents/Styles/TnTComponents/_scheduler.scss
@@ -1,9 +1,17 @@
 ﻿.tnt-scheduler {
     overflow-x: auto;
+    padding: 0.5rem;
+    margin: 0.5rem;
+
+    .date-controls {
+        display: flex;
+
+        .today-button{
+            padding: 0 1rem;
+        }
+    }
 
     .tnt-week-view {
-        padding: 0.5rem;
-        margin: 0.5rem;
         display: grid;
         min-width: $small-screen-up;
 
@@ -11,6 +19,26 @@
             text-align: center;
             user-select: none;
             -webkit-user-select: none;
+
+            &.today {
+                color: $tnt-color-primary;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+
+
+                div {
+                    background-color: $tnt-color-primary;
+                    color: $tnt-color-on-primary;
+                    border-radius: 100%;
+                    width: 1rem;
+                    height: 1rem;
+                    aspect-ratio: 1/1;
+                    padding: 0.1rem;
+                    vertical-align: middle;
+                    text-align: center;
+                }
+            }
         }
 
         .tnt-slot {
@@ -28,8 +56,14 @@
                     background-color: $tnt-color-surface-container-highest;
                 }
 
+
                 &.tnt-slot-outline {
                     border: 1px solid color-mix(in srgb, $tnt-color-outline-variant 30%, transparent);
+                }
+
+                &.today {
+                    border-left: 1px solid $tnt-color-primary;
+                    border-right: 1px solid $tnt-color-primary;
                 }
             }
 
