Added new CSS class and event handlers to TnTWeekView and _scheduler.scss
In `TnTWeekView.razor`, a new CSS class `tnt-clickable` has been added to the `div` element conditionally, making the time slot clickable if a delegate is assigned to `TimeSlotClickedCallback`. Also, `ondragover`, `ondragleave`, and `ondrop` events have been added to handle drag operations and call the `OnDropEvent` method with a new `DateTime` object. In `_scheduler.scss`, the `.tnt-clickable` class has been added to change the cursor to a pointer on hover, enhancing UI feedback. A closing brace `}` has also been removed for formatting purposes.

--- a/TnTComponents/Scheduler/TnTWeekView.razor
+++ b/TnTComponents/Scheduler/TnTWeekView.razor
@@ -38,7 +38,7 @@
                         </div>
                     }
                     else {
-                        <div class="tnt-slot tnt-day-slot@(show ? " tnt-slot-outline" : null) @(date == DateOnly.FromDateTime(DateTimeOffset.Now.Date) ? " today" : null)"
+                        <div class="tnt-slot tnt-day-slot@(show ? " tnt-slot-outline" : null) @(date == DateOnly.FromDateTime(DateTimeOffset.Now.Date) ? " today" : null) @(TimeSlotClickedCallback.HasDelegate ? " tnt-clickable" : null)"
                              style="@gridPosition.ToCssString()"
                              ondragover="event.preventDefault();this.style.fontWeight = '600';"
                              ondragleave="this.style.fontWeight='100';"
