Added InfiniteScroll page and updated TnTVirtualize component
A new InfiniteScroll page was added in `InfiniteScroll.razor` using the `TnTVirtualize` component for infinite scrolling functionality. A navigation link for this page was added in `MainLayout.razor`. The `TnTVirtualize` component was updated with support for infinite scrolling and customizable templates. The `TnTVirtualize` class in `TnTVirtualize.razor.cs` was refactored, removing inheritance from `TnTPageScriptComponent` and updating several methods. The `TnTVirtualizeItemsRequestDelegate` in `TnTVirtualizeItemsRequest.cs` was updated to take a `TnTVirtualizeItemsRequest` parameter. The solution configuration platforms in `TnTComponents.sln` were updated to include Debug and Release for Any CPU.

--- a/LiveTest/LiveTest/Components/Layout/MainLayout.razor
+++ b/LiveTest/LiveTest/Components/Layout/MainLayout.razor
@@ -29,7 +29,7 @@
         <TnTSideNavMenuLink Icon="MaterialIcon.Snooze" Href="/snackbar">
             Snackbar
         </TnTSideNavMenuLink>
-        <TnTSideNavMenuLink  Href="/navlinks">
+        <TnTSideNavMenuLink Href="/navlinks">
             Nav Links
         </TnTSideNavMenuLink>
         <TnTSideNavMenuGroup Title="Group 1" Icon="MaterialIcon.Business">
@@ -85,6 +85,9 @@
         </TnTSideNavMenuLink>
         <TnTSideNavMenuLink Icon="MaterialIcon.MergeType" Href="/typeahead">
             Typeahead
+        </TnTSideNavMenuLink>
+        <TnTSideNavMenuLink Icon="MaterialIcon.ScreenLockLandscape" Href="/InfiniteScroll">
+            Infinite Scroll
         </TnTSideNavMenuLink>
     </TnTSideNav>
 
