Updated theme toggle functionality and styles
Updated `style.scss`, `TnTThemeToggle.razor`, and `TnTThemeToggle.razor.js` files. Removed media query for dark theme preference and `::-webkit-calendar-picker-indicator` style from `style.scss`, and added new style for `tnt-theme-toggle`. Updated `TnTThemeToggle.razor` to include a span for the toggle icon and a select dropdown for theme selection. Major changes in `TnTThemeToggle.razor.js` include removal of `getCurrentTheme` and `toggleTheme` functions, addition of `getStoredTheme`, `setStoredTheme`, `systemPrefersDark`, `themeSelected`, and `initSelect` functions, and updates to `updateThemeAttributes`, `onLoad`, and `updateIcon` functions to enhance theme selection and storage functionality.

--- a/TnTComponents/Theming/TnTThemeToggle.razor
+++ b/TnTComponents/Theming/TnTThemeToggle.razor
@@ -2,6 +2,13 @@
 @namespace TnTComponents
 @using TnTComponents.Core
 <tnt-theme-toggle @attributes="AdditionalAttributes">
+    <span class="tnt-icon material-icons tnt-theme-toggle-icon">
+    </span>
+    <select title="Select Theme" class="tnt-theme-select">
+        <option value="LIGHT">Light</option>
+        <option value="DARK">Dark</option>
+        <option value="SYSTEM">System</option>
+    </select>
 </tnt-theme-toggle>
 
 @RenderPageScript()
