--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -41,14 +41,6 @@ body {
     }
 }
 
-:has(#tnt-theme-design-dark[media=\(prefers-color-scheme\:\ dark\)]), :has(#tnt-theme-design-dark[media=\(prefers-color-scheme\:dark\)]) {
-    @media (prefers-color-scheme: dark) {
-        ::-webkit-calendar-picker-indicator {
-            filter: invert(1);
-        }
-    }
-}
-
 .tnt-divider-horizontal {
     box-sizing: border-box;
     border-top: 1px solid var(--divider-color);
@@ -65,4 +57,41 @@ body {
 
 .tnt-grid-container {
     display: grid;
+}
+
+tnt-theme-toggle {
+    width: 1.5rem;
+    height: 1.5rem;
+    position: relative;
+
+    & > .tnt-theme-toggle-icon {
+        user-select: none;
+        cursor: pointer;
+        z-index: 0;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        left: 0;
+        top: 0;
+    }
+
+    & > select {
+        z-index: 1;
+        background: none;
+        color: none;
+        border: none;
+        appearance: none;
+        outline: none;
+        width: 100%;
+        height: 100%;
+        font-size: 0;
+        position: absolute;
+        left: 0;
+        top: 0;
+        cursor: pointer;
+
+        & > option {
+            font-size: 1rem;
+        }
+    }
 }
