Refactor icon rendering and update TnTIcon class
The icon rendering in various components has been refactored to use direct icon references instead of the `Render()` method. This change simplifies the code and potentially improves performance. The `TnTIcon` class has been significantly updated, including the addition of new properties and methods, and changes to existing ones. The `MaterialIconSize` enum has been renamed to `IconSize`, and a new `IconAppearance` enum has been added. The `MaterialIconAppearance` enum has been removed. Changes have also been made to `TnTColumnBase`, `TnTInputBase`, `TnTInputRadio`, `TnTInputSelect`, `TnTSideNavMenuGroup.razor`, and `TnTTabView.razor` to align with these updates.

--- a/TnTComponents/Buttons/TnTImageButton.razor
+++ b/TnTComponents/Buttons/TnTImageButton.razor
@@ -11,7 +11,7 @@
     disabled="@Disabled"
     autofocus="@AutoFocus"
     @onclick="OnClick">
-    @Icon.Render()
+    @Icon
 </button>
 
 @RenderPageScript()
