--- a/TnTComponents/Layout/TnTSideNavMenuGroup.razor
+++ b/TnTComponents/Layout/TnTSideNavMenuGroup.razor
@@ -5,9 +5,9 @@
 
 <tnt-side-nav-menu-group @attributes="AdditionalAttributes" class="@CssClass" style="@CssStyle">
     <span>
-        @Icon?.Render()
+        @Icon
         @Title
-        @MaterialIcon.ArrowDropDown.Render()
+        @MaterialIcon.ArrowDropDown
     </span>
 
     <div>
