--- a/TnTComponents/TabView/TnTTabView.razor
+++ b/TnTComponents/TabView/TnTTabView.razor
@@ -19,7 +19,7 @@
                                                                                                                         .AddRipple()
                                                                                                                         .Build())">
                             @if (!SecondaryTabView) {
-                                @child.Icon?.Render()
+                                @child.Icon
                             }
                             @child.Title
                         </button>
