--- a/TnTComponents/Core/TnTNavLink.razor
+++ b/TnTComponents/Core/TnTNavLink.razor
@@ -4,7 +4,7 @@
 @using TnTComponents.Core
 
 <a @attributes="AdditionalAttributes" href="@Href" class="@CssClass" style="@CssStyle" @ref="Element" >
-    @StartIcon?.Render()
+    @StartIcon
     @ChildContent
-    @EndIcon?.Render()
+    @EndIcon
 </a>
